--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-language: cpp
 sudo: required
-compiler:
-    - gcc
-before_install:
-    - wget https://raw.githubusercontent.com/yast/yast-devtools/master/travis-tools/travis_setup.sh
-    - sh ./travis_setup.sh -p yast2-installation-control
-script:
-    - cd control
-    - make check
+language: bash
+services:
+  - docker
 
+before_install:
+  - docker build -t skelcd-control-caasp-image .
+
+script:
+  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" skelcd-control-caasp-image ./.travis.sh
