Generate Kubic control.xml using XSL transformation
- That's more reliable than plain text patching
- Easier to update
- Build both (Kubic and CaaSP) flavors in Travis
- The hack in `.gitignore` is not needed anymore
- 15.0.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ before_install:
   - docker build -t skelcd-control-caasp-image .
 
 script:
-  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" skelcd-control-caasp-image ./.travis.sh
+  # the builds can run sequentially, the build in Docker is fast and Docker isolates
+  # the containers (the second run has the very same initial image as the first run)
+  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e BUILD_FLAVOR=caasp skelcd-control-caasp-image ./.travis.sh
+  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e BUILD_FLAVOR=kubic skelcd-control-caasp-image ./.travis.sh
