--- a/control/Makefile
+++ b/control/Makefile
@@ -3,3 +3,9 @@
 check: /usr/share/YaST2/control/control.rng
 	xmllint --relaxng /usr/share/YaST2/control/control.rng --noout *.xml
 
+# generate the control.Kubic.xml file
+control.Kubic.xml: control.Kubic.xsl control.CAASP.xml
+	xsltproc control.Kubic.xsl control.CAASP.xml > control.Kubic.xml
+
+clean:
+	rm -f control.Kubic.xml
