--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ services:
 
 before_install:
   - docker build -t skelcd-control-caasp-image .
+    # list the installed packages (just for easier debugging)
+  - docker run --rm -it skelcd-control-caasp-image rpm -qa | sort
 
 script:
   # the builds can run sequentially, the build in Docker is fast and Docker isolates
