--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,4 @@ before_install:
 script:
   # the builds can run sequentially, the build in Docker is fast and Docker isolates
   # the containers (the second run has the very same initial image as the first run)
-  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e BUILD_FLAVOR=caasp skelcd-control-caasp-image ./.travis.sh
-  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e BUILD_FLAVOR=kubic skelcd-control-caasp-image ./.travis.sh
+  - docker run -it -e TRAVIS=1 -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" skelcd-control-caasp-image ./.travis.sh
